[gd_scene load_steps=5 format=3 uid="uid://buxji1hpuofnn"]

[ext_resource type="Script" path="res://Interfaces/main_menu.gd" id="1_pdetj"]
[ext_resource type="Texture2D" uid="uid://b41br10fohjag" path="res://Textures/ahsokamenu2.png" id="2_1hv1k"]

[sub_resource type="SystemFont" id="SystemFont_uk88g"]
font_names = PackedStringArray("Franklin Gothic")
subpixel_positioning = 0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mkmf0"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pdetj")
metadata/_edit_lock_ = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = -15

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_1hv1k")
metadata/_edit_lock_ = true

[node name="LoadHub" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.00392157, 0.207843, 0.439216, 1)
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.603922, 0.211765, 0.905882, 1)
theme_override_colors/font_focus_color = Color(0.0470588, 0.47451, 0.933333, 1)
theme_override_colors/font_color = Color(0.0470588, 0.47451, 0.933333, 1)
theme_override_colors/font_outline_color = Color(0, 0.0901961, 0.219608, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = SubResource("SystemFont_uk88g")
theme_override_font_sizes/font_size = 39
theme_override_styles/focus = SubResource("StyleBoxEmpty_mkmf0")
text = "Load Hub"
flat = true

[node name="LoadLevel" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.00392157, 0.207843, 0.439216, 1)
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.603922, 0.211765, 0.905882, 1)
theme_override_colors/font_focus_color = Color(0.0470588, 0.47451, 0.933333, 1)
theme_override_colors/font_color = Color(0.0470588, 0.47451, 0.933333, 1)
theme_override_colors/font_outline_color = Color(0, 0.0901961, 0.219608, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = SubResource("SystemFont_uk88g")
theme_override_font_sizes/font_size = 39
theme_override_styles/focus = SubResource("StyleBoxEmpty_mkmf0")
text = "Load Level"
flat = true

[node name="NewGame" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.00392157, 0.207843, 0.439216, 1)
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.603922, 0.211765, 0.905882, 1)
theme_override_colors/font_focus_color = Color(0.0470588, 0.47451, 0.933333, 1)
theme_override_colors/font_color = Color(0.0470588, 0.47451, 0.933333, 1)
theme_override_colors/font_outline_color = Color(0, 0.0901961, 0.219608, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = SubResource("SystemFont_uk88g")
theme_override_font_sizes/font_size = 39
theme_override_styles/focus = SubResource("StyleBoxEmpty_mkmf0")
text = "New Game"
flat = true

[node name="LoadGame" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.00392157, 0.207843, 0.439216, 1)
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.603922, 0.211765, 0.905882, 1)
theme_override_colors/font_focus_color = Color(0.0470588, 0.47451, 0.933333, 1)
theme_override_colors/font_color = Color(0.0470588, 0.47451, 0.933333, 1)
theme_override_colors/font_outline_color = Color(0, 0.0901961, 0.219608, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = SubResource("SystemFont_uk88g")
theme_override_font_sizes/font_size = 39
theme_override_styles/focus = SubResource("StyleBoxEmpty_mkmf0")
text = "Load Game"
flat = true

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.00392157, 0.207843, 0.439216, 1)
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.603922, 0.211765, 0.905882, 1)
theme_override_colors/font_focus_color = Color(0.0470588, 0.47451, 0.933333, 1)
theme_override_colors/font_color = Color(0.0470588, 0.47451, 0.933333, 1)
theme_override_colors/font_outline_color = Color(0, 0.0901961, 0.219608, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = SubResource("SystemFont_uk88g")
theme_override_font_sizes/font_size = 39
theme_override_styles/focus = SubResource("StyleBoxEmpty_mkmf0")
text = "Options"
flat = true

[node name="ControlSetup" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.00392157, 0.207843, 0.439216, 1)
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.603922, 0.211765, 0.905882, 1)
theme_override_colors/font_focus_color = Color(0.0470588, 0.47451, 0.933333, 1)
theme_override_colors/font_color = Color(0.0470588, 0.47451, 0.933333, 1)
theme_override_colors/font_outline_color = Color(0, 0.0901961, 0.219608, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = SubResource("SystemFont_uk88g")
theme_override_font_sizes/font_size = 39
theme_override_styles/focus = SubResource("StyleBoxEmpty_mkmf0")
text = "Control Setup"
flat = true

[node name="VideoSettings" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.00392157, 0.207843, 0.439216, 1)
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.603922, 0.211765, 0.905882, 1)
theme_override_colors/font_focus_color = Color(0.0470588, 0.47451, 0.933333, 1)
theme_override_colors/font_color = Color(0.0470588, 0.47451, 0.933333, 1)
theme_override_colors/font_outline_color = Color(0, 0.0901961, 0.219608, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = SubResource("SystemFont_uk88g")
theme_override_font_sizes/font_size = 39
theme_override_styles/focus = SubResource("StyleBoxEmpty_mkmf0")
text = "Video Settings"
flat = true

[node name="EffectsSettings" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.00392157, 0.207843, 0.439216, 1)
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.603922, 0.211765, 0.905882, 1)
theme_override_colors/font_focus_color = Color(0.0470588, 0.47451, 0.933333, 1)
theme_override_colors/font_color = Color(0.0470588, 0.47451, 0.933333, 1)
theme_override_colors/font_outline_color = Color(0, 0.0901961, 0.219608, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = SubResource("SystemFont_uk88g")
theme_override_font_sizes/font_size = 39
theme_override_styles/focus = SubResource("StyleBoxEmpty_mkmf0")
text = "Effects Settings"
flat = true

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.00392157, 0.207843, 0.439216, 1)
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.603922, 0.211765, 0.905882, 1)
theme_override_colors/font_focus_color = Color(0.0470588, 0.47451, 0.933333, 1)
theme_override_colors/font_color = Color(0.0470588, 0.47451, 0.933333, 1)
theme_override_colors/font_outline_color = Color(0, 0.0901961, 0.219608, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = SubResource("SystemFont_uk88g")
theme_override_font_sizes/font_size = 39
theme_override_styles/focus = SubResource("StyleBoxEmpty_mkmf0")
text = "Quit"
flat = true

[node name="Mod" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 14.0
offset_right = 208.0
offset_bottom = 56.0
text = "Ahsoka Show"

[node name="Level" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 56.0
offset_right = 208.0
offset_bottom = 98.0
text = "Debe"

[node name="Section" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 98.0
offset_right = 208.0
offset_bottom = 140.0

[node name="FreePlayCheck" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 225.0
offset_top = 10.0
offset_right = 320.0
offset_bottom = 41.0
button_pressed = true
text = "FreePlay"

[connection signal="pressed" from="CenterContainer/VBoxContainer/LoadHub" to="." method="_on_load_hub_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LoadLevel" to="." method="_on_load_level_pressed"]
